update CombinatoricsView with creating permutations and two lists with repeats and without

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="factorial">Факториал</string>
     <string name="combinations">Перестановки</string>
     <string name="confirm_button">Подтвердить</string>
+    <string name="elements">Элементы</string>
+    <string name="enter_elements">Введите элементы</string>
+    <string name="count">Длина</string>
+    <string name="fill_1">1</string>
+    <string name="enter_number">Введите число</string>
 </resources>
