--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="count">Длина</string>
     <string name="fill_1">1</string>
     <string name="enter_number">Введите число</string>
+    <string name="placement">Размещение</string>
+    <string name="combination">Сочетания</string>
+    <string name="a">A</string>
+    <string name="c">C</string>
 </resources>
